2001-06-22  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_make_list)  Bugfix:  Use the "_install"
	template instead of the GLOBAL defaults to initialize 
	mailing lists.

2001-06-22  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Util.pm (n_defaults): The default file for a bounce probe
	is "bounceprobe".

	* lib/Mj/Token.pm (confirm): Set token type to 'probe' as
	appropriate.  Set envelope extention properly for probe tokens.

	* lib/Majordomo.pm (_put): Preliminary: allow put-delete.
	(_list_file_get): Search per-language default files before
	searching non-language-specific default files.

2001-06-20  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Note that the -D option causes the debugging
	output to be sent to stderr, not stdout.  Thanks to Paul
	Hancock.

	* lib/Majordomo.pm:  (_list_sync_owners)  Bugfix:  Use the
	correct address when the GLOBAL:owners auxiliary list is
	changed.

	* lib/Mj/Archive.pm:  (_expand_message_range) Bugfix: 
	Initialize the archive name and number correctly.
	(remove) Bugfix:  Always look up the data for each message.
	Thanks to SRE.

	* lib/Mj/Config.pm:  (load)  Bugfix:  Use the GLOBAL 
	installation defaults with the DEFAULT list.
	(regen, set) Bugfix:  Do not parse addresses for the DEFAULT list.
	(isparsed)  Move the DEFAULT/address exception to the
	regen and set routines.  Thanks to Paul Hancock.

	* lib/Mj/Format.pm:  (configshow)  Bugfix:  check for
	equivalence when comparing enumerated values.  Thanks to Duncan
	Hill.
	(lists) Bugfix:  Initialize "legend" variable for the
	lists-enhanced command.  Thanks to Paul Hancock.

2001-06-15  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/CommandProps.pm: Add consecutive_days as a legal variable
	for bounce_rules.

2001-06-14  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/List.pm (bounce_gen_stats): Calculate consecutive_days
	statistic.

	* lib/Mj/BounceHandler.pm (handle_bounce_probe): New function:
	deal with bouncing bounce probes.